# rtdenoise

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
rtdenoise/models/: components.py  kpcn.py
rtdenoise/training/: frame_dataset.py  train.py
scripts/: sample_train.py
src/rtdenoise/: __init__.py
src/rtdenoise/kernels/: __init__.py  kernel_attn.py  resid_upsample_attn.py  upscale_attn.py
src/rtdenoise/kernels/cpu/: kernel_attn.cpp  upscale_attn.cpp
src/rtdenoise/kernels/cuda/: kernel_attn.cu  upscale_attn.cu
src/rtdenoise/models/: base_denoiser.py  bayesian_kernel_predictor.py  components.py  fct.py  gcpe2_transformer.py  gcpe_transformer.py  gcpe_transformer_ec.py  gcpe_upscaler.py  kpcn.py  laplacian_denoiser.py  laplacian_pyramid_unet.py  overfit.py  rdet.py  rdet_l.py  rdet_v.py  single_frame_diffusion.py  transformer_denoiser.py  transformer_unet.py  utils.py
src/rtdenoise/training/: __init__.py  fast_dataset.py  frame_dataset.py  loss_functions.py  prebatched_dataset.py  train.py
tests/: test_kernel_attn.py  test_upscale_attn.py
