[project]
name = "rtdenoise"
version = "0.0.1"
description = "Denoising library for Monte Carlo path traced images."
readme = "README.md"
requires-python = ">=3.8"
dependencies  = [
    "torch", "numpy", "openexr-numpy",
]

[build-system]
requires = [
    "setuptools>=42", 
    "torch"
]
build-backend = "setuptools.build_meta"